--- a/guidance/sentence-reduction-requirements.html
+++ b/guidance/sentence-reduction-requirements.html
@@ -131,6 +131,16 @@
         }
     </style>
 </head>
+<body>
+    <div class="container">
+        <div class="header">
+           
 
+            <div style="text-align: center; margin-top: 30px;">
+                <a href="javascript:window.close()" class="back-btn">返回</a>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
 
